added confetti to project, change styling on win condition

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         </div>
     </div>
     <div id="turnSwitcher"></div>
+    <!-- Adds Confetti Animation to the project if someone wins, creates a class named JSConfetti() to the code -->
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
